--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -6,18 +6,16 @@
 @import "../../../Styles/_rock-variables.less";
 @import "_variables.less";
 @import "_variable-overrides.less";
-@import "_spacing.less";
-@import "_display.less";
-@import "_transforms.less";
-@import "_ratios.less";
+// @import "_transforms.less";
+// @import "_ratios.less";
 @import "_typography.less";
 @import "_buttons.less";
 @import "_colors.less";
-@import "_flexgrid.less";
 @import "_swiper.less";
 @import "_shadows.less";
 @import "_borders.less";
 @import "_gauntlet.less";
+@import "_helpers.less";
 @import "_print.less";
 
 /*
@@ -56,7 +54,7 @@ html {
 // -------------------------
 
 section {
-  padding: @base-spacing-unit*24 @base-spacing-unit*8;
+  padding: @spacer*24 @spacer*8;
 }
 
 .fullscreen {
@@ -107,27 +105,27 @@ section {
   text-decoration-line: none;
 }
 
-@media (min-width: @breakpoints[sm]) {
+@media @sm {
   section {
-    padding-left: @base-spacing-unit*24;
-    padding-right: @base-spacing-unit*24;
+    padding-left: @spacer*24;
+    padding-right: @spacer*24;
   }
 }
 
-@media (min-width: @breakpoints[md]) {
+@media @md {
   section {
-    padding-top: @base-spacing-unit*32;
-    padding-bottom: @base-spacing-unit*32;
+    padding-top: @spacer*32;
+    padding-bottom: @spacer*32;
   }
 }
 
-@media (min-width: @breakpoints[lg]) {
+@media @lg {
 }
 
-@media (min-width: @breakpoints[xl]) {
+@media @xl {
   section {
-    padding-top: @base-spacing-unit*48;
-    padding-bottom: @base-spacing-unit*48;
+    padding-top: @spacer*48;
+    padding-bottom: @spacer*48;
   }
 }
 
