added js for accordions, sizing utilities, and tailwind sandbox

--- a/Themes/new/Styles/_helpers.less
+++ b/Themes/new/Styles/_helpers.less
@@ -10,6 +10,7 @@
 @import "utilities/_positioning.less";
 @import "utilities/_transforms.less";
 @import "utilities/_spacing.less";
+@import "utilities/_sizing.less";
 @import "../../../Styles/utilities/_spacing.less";
 
 .ns-util-mix-display;
@@ -18,6 +19,7 @@
 .ns-util-mix-positioning;
 .ns-util-mix-transform;
 .ns-util-mix-spacing;
+.ns-util-mix-sizing;
 
 @media @sm {
   .ns-util-mix-display("sm");
@@ -26,6 +28,7 @@
   .ns-util-mix-positioning("sm");
   .ns-util-mix-transform("sm");
   .ns-util-mix-spacing("sm");
+  .ns-util-mix-sizing("sm");
 }
 
 @media @md {
@@ -35,6 +38,7 @@
   .ns-util-mix-positioning("md");
   .ns-util-mix-transform("md");
   .ns-util-mix-spacing("md");
+  .ns-util-mix-sizing("md");
 }
 
 @media @lg {
@@ -44,6 +48,7 @@
   .ns-util-mix-positioning("lg");
   .ns-util-mix-transform("lg");
   .ns-util-mix-spacing("lg");
+  .ns-util-mix-sizing("lg");
 }
 
 @media @xl {
@@ -53,4 +58,5 @@
   .ns-util-mix-positioning("xl");
   .ns-util-mix-transform("xl");
   .ns-util-mix-spacing("xl");
+  .ns-util-mix-sizing("xl");
 }
