--- a/Themes/new/Styles/utilities/_spacing.less
+++ b/Themes/new/Styles/utilities/_spacing.less
@@ -21,6 +21,9 @@
 
 // stylelint-disable declaration-block-single-line-max-declarations
 .margin-breakpoints(@infix) {
+  .m@{infix}-0 {
+    margin: 0 !important;
+  }
   .m@{infix}-6 {
     margin: @spacer * @spacing-6 !important;
   }
@@ -43,6 +46,10 @@
     margin: @spacer * @spacing-12 !important;
   }
 
+  .mx@{infix}-0 {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
   .mx@{infix}-6 {
     margin-right: @spacer * @spacing-6 !important;
     margin-left: @spacer * @spacing-6 !important;
@@ -72,6 +79,10 @@
     margin-left: @spacer * @spacing-12 !important;
   }
 
+  .my@{infix}-0 {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
   .my@{infix}-6 {
     margin-top: @spacer * @spacing-6 !important;
     margin-bottom: @spacer * @spacing-6 !important;
@@ -101,6 +112,9 @@
     margin-bottom: @spacer * @spacing-12 !important;
   }
 
+  .mt@{infix}-0 {
+    margin-top: 0 !important;
+  }
   .mt@{infix}-6 {
     margin-top: @spacer * @spacing-6 !important;
   }
@@ -123,6 +137,9 @@
     margin-top: @spacer * @spacing-12 !important;
   }
 
+  .mr@{infix}-0 {
+    margin-right: 0 !important;
+  }
   .mr@{infix}-6 {
     margin-right: @spacer * @spacing-6 !important;
   }
@@ -145,6 +162,9 @@
     margin-right: @spacer * @spacing-12 !important;
   }
 
+  .mb@{infix}-0 {
+    margin-bottom: 0 !important;
+  }
   .mb@{infix}-5 {
     margin-bottom: @spacer * @spacing-5 !important;
   }
@@ -170,6 +190,9 @@
     margin-bottom: @spacer * @spacing-12 !important;
   }
 
+  .ml@{infix}-0 {
+    margin-left: 0 !important;
+  }
   .ml@{infix}-6 {
     margin-left: @spacer * @spacing-6 !important;
   }
@@ -194,6 +217,9 @@
 }
 
 .padding-breakpoints(@infix) {
+  .p@{infix}-0 {
+    padding: 0 !important;
+  }
   .p@{infix}-6 {
     padding: @spacer * @spacing-6 !important;
   }
@@ -216,6 +242,10 @@
     padding: @spacer * @spacing-12 !important;
   }
 
+  .px@{infix}-0 {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
   .px@{infix}-6 {
     padding-right: @spacer * @spacing-6 !important;
     padding-left: @spacer * @spacing-6 !important;
@@ -245,6 +275,10 @@
     padding-left: @spacer * @spacing-12 !important;
   }
 
+  .py@{infix}-0 {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
   .py@{infix}-6 {
     padding-top: @spacer * @spacing-6 !important;
     padding-bottom: @spacer * @spacing-6 !important;
@@ -274,6 +308,9 @@
     padding-bottom: @spacer * @spacing-12 !important;
   }
 
+  .pt@{infix}-0 {
+    padding-top: 0 !important;
+  }
   .pt@{infix}-6 {
     padding-top: @spacer * @spacing-6 !important;
   }
@@ -296,6 +333,9 @@
     padding-top: @spacer * @spacing-12 !important;
   }
 
+  .pr@{infix}-0 {
+    padding-right: 0 !important;
+  }
   .pr@{infix}-6 {
     padding-right: @spacer * @spacing-6 !important;
   }
@@ -318,6 +358,9 @@
     padding-right: @spacer * @spacing-12 !important;
   }
 
+  .pb@{infix}-0 {
+    padding-bottom: 0 !important;
+  }
   .pb@{infix}-6 {
     padding-bottom: @spacer * @spacing-6 !important;
   }
@@ -340,6 +383,9 @@
     padding-bottom: @spacer * @spacing-12 !important;
   }
 
+  .pl@{infix}-0 {
+    padding-left: 0 !important;
+  }
   .pl@{infix}-6 {
     padding-left: @spacer * @spacing-6 !important;
   }
