--- a/Themes/new/Styles/_typography.less
+++ b/Themes/new/Styles/_typography.less
@@ -126,6 +126,46 @@ blockquote {
   color: @gray;
 }
 
+.font-sans {
+  font-family: @font-family-headings;
+}
+.font-serif {
+  font-family: @font-family-sans-serif;
+}
+.italic {
+  font-style: italic;
+}
+.not-italic {
+  font-style: normal;
+}
+.font-thin {
+  font-weight: 100;
+}
+.font-extralight {
+  font-weight: 200;
+}
+.font-light {
+  font-weight: 300;
+}
+.font-normal {
+  font-weight: 400;
+}
+.font-medium {
+  font-weight: 500;
+}
+.font-semibold {
+  font-weight: 600;
+}
+.font-bold {
+  font-weight: 700;
+}
+.font-extrabold {
+  font-weight: 800;
+}
+.font-black {
+  font-weight: 900;
+}
+
 mark {
   background-color: #fff14f;
 }
@@ -134,9 +174,6 @@ a {
   text-decoration: underline;
 }
 
-.text-italic {
-  font-style: italic;
-}
 .list-none {
   list-style-type: none;
 }
