--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -57,6 +57,11 @@ section {
   padding: @spacer*24 @spacer*8;
 }
 
+section,
+footer {
+  overflow: hidden;
+}
+
 .fullscreen {
   position: absolute;
   top: 0;
@@ -91,6 +96,9 @@ section {
   position: relative;
   z-index: 1;
 }
+.height-max-content {
+  height: max-content;
+}
 .grayscale {
   filter: grayscale(1);
 }
@@ -100,9 +108,13 @@ section {
 .text-constrained {
   max-width: 700px;
 }
-.no-underline,
-.no-underline:hover {
-  text-decoration-line: none;
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+footer a:hover {
+  color: @white;
 }
 
 @media @sm {
@@ -114,8 +126,8 @@ section {
 
 @media @md {
   section {
-    padding-top: @spacer*32;
-    padding-bottom: @spacer*32;
+    padding-top: @spacer*48;
+    padding-bottom: @spacer*48;
   }
 }
 
@@ -124,8 +136,8 @@ section {
 
 @media @xl {
   section {
-    padding-top: @spacer*48;
-    padding-bottom: @spacer*48;
+    padding-top: @spacer*64;
+    padding-bottom: @spacer*64;
   }
 }
 
