--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -51,6 +51,18 @@ html {
 // 3. Theme Styling
 // -------------------------
 
+#navigation-wrapper {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1001;
+  transition: all 0.1s ease-in-out;
+}
+
+.js-container {
+  padding: 0 !important;
+}
+
 section {
   padding: @spacer*24 @spacer*8;
 }
