split out gauntlet and easter stylesheets

--- a/Themes/new/Styles/_typography.less
+++ b/Themes/new/Styles/_typography.less
@@ -178,6 +178,10 @@ a {
   list-style-type: none;
 }
 
+.text-decoration-none a {
+  text-decoration: none;
+}
+
 @media @sm {
   .display-1 {
     font-size: ceil(@font-size-display-1 * 1.18); // 76px
