--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -49,6 +49,9 @@ html {
 
 // 3. Theme Styling
 // -------------------------
+.hidden {
+  display: none !important;
+}
 
 #navigation-wrapper {
   position: fixed;
