--- a/Themes/new/Styles/easter.less
+++ b/Themes/new/Styles/easter.less
@@ -6,6 +6,11 @@
   --blue-dark: #00449b;
 }
 
+svg {
+  shape-rendering: crisp-edges !important;
+  stroke-width: 0.5;
+}
+
 .bg-orange {
   background-color: var(--orange);
 }
@@ -66,10 +71,6 @@
   color: var(--blue-dark);
 }
 
-// font-family: "futura-pt", sans-serif;
-// font-weight: 400;
-// font-style: normal;
-
 .easter {
   h1,
   h2,
@@ -77,9 +78,18 @@
   h4,
   h5,
   h6 {
-    font-family: "futura-pt-bold", sans-serif;
-    font-weight: 700;
+    font-family: "proxima-nova", sans-serif;
+    font-weight: 900;
     font-style: normal;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  h3,
+  h4,
+  h5,
+  h6 {
+    letter-spacing: 0px;
   }
 
   .btn-primary {
