--- a/Themes/new/Styles/theme.css
+++ b/Themes/new/Styles/theme.css
@@ -21627,6 +21627,7 @@ section {
 }
 .background-cover {
   background-size: cover;
+  background-repeat: no-repeat;
 }
 .background-center {
   background-position: center;
