--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -78,6 +78,7 @@ section {
 }
 .background-cover {
   background-size: cover;
+  background-repeat: no-repeat;
 }
 .background-center {
   background-position: center;
