changes for about page

--- a/Themes/new/Styles/_typography.less
+++ b/Themes/new/Styles/_typography.less
@@ -165,6 +165,9 @@ blockquote {
 .font-black {
   font-weight: 900;
 }
+.font-underline {
+ text-decoration: underline;
+}
 
 mark {
   background-color: #fff14f;
