--- a/Themes/new/Styles/utilities/_flexgrid.less
+++ b/Themes/new/Styles/utilities/_flexgrid.less
@@ -61,6 +61,46 @@
     grid-column: 1 / -1;
   }
 
+  .col-start@{infix}-1 {
+    grid-column-start: 1;
+  }
+  .col-start@{infix}-2 {
+    grid-column-start: 2;
+  }
+  .col-start@{infix}-3 {
+    grid-column-start: 3;
+  }
+  .col-start@{infix}-4 {
+    grid-column-start: 4;
+  }
+  .col-start@{infix}-5 {
+    grid-column-start: 5;
+  }
+  .col-start@{infix}-6 {
+    grid-column-start: 6;
+  }
+  .col-start@{infix}-7 {
+    grid-column-start: 7;
+  }
+  .col-start@{infix}-8 {
+    grid-column-start: 8;
+  }
+  .col-start@{infix}-9 {
+    grid-column-start: 9;
+  }
+  .col-start@{infix}-10 {
+    grid-column-start: 10;
+  }
+  .col-start@{infix}-11 {
+    grid-column-start: 11;
+  }
+  .col-start@{infix}-12 {
+    grid-column-start: 12;
+  }
+  .col-start@{infix}-initial {
+    grid-column-start: initial;
+  }
+
   .justify-items@{infix}-start {
     justify-items: start;
   }
