more updates for the about page

--- a/Themes/new/Styles/_variable-overrides.less
+++ b/Themes/new/Styles/_variable-overrides.less
@@ -76,13 +76,21 @@
 // Buttons
 @btn-font-weight: normal;
 //--
-@btn-default-color: @brand-primary;
+@btn-default-color: @gray-darker;
 @btn-default-bg: #fff;
 @btn-default-border: @brand-primary;
 //--
 @btn-primary-color: #fff;
 @btn-primary-bg: @brand-primary;
 @btn-primary-border: @btn-primary-bg;
+//--
+@btn-secondary-color: #fff;
+@btn-secondary-bg: @brand-secondary;
+@btn-secondary-border: @brand-secondary;
+//--
+@btn-tertiary-color: #fff;
+@btn-tertiary-bg: @brand-tertiary;
+@btn-tertiary-border: @brand-tertiary;
 //--
 @btn-success-color: #fff;
 @btn-success-bg: @brand-success;
