--- a/Themes/new/Styles/_buttons.less
+++ b/Themes/new/Styles/_buttons.less
@@ -2,6 +2,19 @@
   border: 0;
   transition: all 0.1s ease-in-out;
 }
+
+.btn-secondary {
+  .button-variant(@btn-secondary-color; @btn-secondary-bg; @btn-secondary-border);
+}
+
+.btn-tertiary {
+  .button-variant(@btn-tertiary-color; @btn-tertiary-bg; @btn-tertiary-border);
+}
+
+.btn-dark {
+  .button-variant(@white; @gray-darker; @gray-darker);
+}
+
 .dropdown-menu > li > a {
   text-decoration: none;
   font-family: @font-family-headings;
