--- a/Themes/new/Styles/theme.css
+++ b/Themes/new/Styles/theme.css
@@ -2495,7 +2495,7 @@ td.wrap-contents {
   position: absolute;
   z-index: 9;
   margin: 8px;
-  color: #6bac43;
+  color: #1c1c1c;
   text-decoration: none;
   background: #daeccf;
 }
@@ -2609,7 +2609,7 @@ td.grid-col-actions {
   margin-left: 8px;
 }
 .grid-actions .btn-grid-action {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #fff;
   border-color: #6bac43;
 }
@@ -15783,25 +15783,25 @@ fieldset[disabled] .btn-action.focus {
   background-color: #fff;
 }
 .btn-security {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #fff;
   border-color: #6bac43;
 }
 .btn-security:focus,
 .btn-security.focus {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #e6e6e6;
   border-color: #32501f;
 }
 .btn-security:hover {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #e6e6e6;
   border-color: #508032;
 }
 .btn-security:active,
 .btn-security.active,
 .open > .dropdown-toggle.btn-security {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #e6e6e6;
   background-image: none;
   border-color: #508032;
@@ -15815,7 +15815,7 @@ fieldset[disabled] .btn-action.focus {
 .btn-security:active.focus,
 .btn-security.active.focus,
 .open > .dropdown-toggle.btn-security.focus {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #d4d4d4;
   border-color: #32501f;
 }
@@ -15833,30 +15833,30 @@ fieldset[disabled] .btn-security.focus {
 }
 .btn-security .badge {
   color: #fff;
-  background-color: #6bac43;
+  background-color: #1c1c1c;
 }
 .btn-authentication {
   width: 100%;
   margin-bottom: 8px;
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #fff;
   border-color: #6bac43;
 }
 .btn-authentication:focus,
 .btn-authentication.focus {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #e6e6e6;
   border-color: #32501f;
 }
 .btn-authentication:hover {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #e6e6e6;
   border-color: #508032;
 }
 .btn-authentication:active,
 .btn-authentication.active,
 .open > .dropdown-toggle.btn-authentication {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #e6e6e6;
   background-image: none;
   border-color: #508032;
@@ -15870,7 +15870,7 @@ fieldset[disabled] .btn-security.focus {
 .btn-authentication:active.focus,
 .btn-authentication.active.focus,
 .open > .dropdown-toggle.btn-authentication.focus {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #d4d4d4;
   border-color: #32501f;
 }
@@ -15888,7 +15888,7 @@ fieldset[disabled] .btn-authentication.focus {
 }
 .btn-authentication .badge {
   color: #fff;
-  background-color: #6bac43;
+  background-color: #1c1c1c;
 }
 .btn-authentication:hover {
   background-color: #e6e6e6;
@@ -16034,7 +16034,7 @@ div.aspNetDisabled {
   border-color: #fff;
 }
 .btn-outline-default:hover {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #fff;
   border-color: #fff;
 }
@@ -16114,7 +16114,7 @@ div.aspNetDisabled {
   opacity: 0.5;
 }
 .btn-danger {
-  color: #6bac43;
+  color: #1c1c1c;
   background-color: #fff;
   border-color: #6bac43;
 }
@@ -16164,7 +16164,7 @@ fieldset[disabled] .btn-danger.focus {
 }
 .btn-danger .badge {
   color: #fff;
-  background-color: #6bac43;
+  background-color: #1c1c1c;
 }
 .btn-danger-solid {
   color: #fff;
@@ -16703,6 +16703,165 @@ a {
 .btn {
   border: 0;
   transition: all 0.1s ease-in-out;
+}
+.btn-secondary {
+  color: #fff;
+  background-color: #1c683e;
+  border-color: #1c683e;
+}
+.btn-secondary:focus,
+.btn-secondary.focus {
+  color: #fff;
+  background-color: #114026;
+  border-color: #010402;
+}
+.btn-secondary:hover {
+  color: #fff;
+  background-color: #114026;
+  border-color: #0f3821;
+}
+.btn-secondary:active,
+.btn-secondary.active,
+.open > .dropdown-toggle.btn-secondary {
+  color: #fff;
+  background-color: #114026;
+  background-image: none;
+  border-color: #0f3821;
+}
+.btn-secondary:active:hover,
+.btn-secondary.active:hover,
+.open > .dropdown-toggle.btn-secondary:hover,
+.btn-secondary:active:focus,
+.btn-secondary.active:focus,
+.open > .dropdown-toggle.btn-secondary:focus,
+.btn-secondary:active.focus,
+.btn-secondary.active.focus,
+.open > .dropdown-toggle.btn-secondary.focus {
+  color: #fff;
+  background-color: #0a2415;
+  border-color: #010402;
+}
+.btn-secondary.disabled:hover,
+.btn-secondary[disabled]:hover,
+fieldset[disabled] .btn-secondary:hover,
+.btn-secondary.disabled:focus,
+.btn-secondary[disabled]:focus,
+fieldset[disabled] .btn-secondary:focus,
+.btn-secondary.disabled.focus,
+.btn-secondary[disabled].focus,
+fieldset[disabled] .btn-secondary.focus {
+  background-color: #1c683e;
+  border-color: #1c683e;
+}
+.btn-secondary .badge {
+  color: #1c683e;
+  background-color: #fff;
+}
+.btn-tertiary {
+  color: #fff;
+  background-color: #2a4930;
+  border-color: #2a4930;
+}
+.btn-tertiary:focus,
+.btn-tertiary.focus {
+  color: #fff;
+  background-color: #17291b;
+  border-color: #000000;
+}
+.btn-tertiary:hover {
+  color: #fff;
+  background-color: #17291b;
+  border-color: #142216;
+}
+.btn-tertiary:active,
+.btn-tertiary.active,
+.open > .dropdown-toggle.btn-tertiary {
+  color: #fff;
+  background-color: #17291b;
+  background-image: none;
+  border-color: #142216;
+}
+.btn-tertiary:active:hover,
+.btn-tertiary.active:hover,
+.open > .dropdown-toggle.btn-tertiary:hover,
+.btn-tertiary:active:focus,
+.btn-tertiary.active:focus,
+.open > .dropdown-toggle.btn-tertiary:focus,
+.btn-tertiary:active.focus,
+.btn-tertiary.active.focus,
+.open > .dropdown-toggle.btn-tertiary.focus {
+  color: #fff;
+  background-color: #0a120c;
+  border-color: #000000;
+}
+.btn-tertiary.disabled:hover,
+.btn-tertiary[disabled]:hover,
+fieldset[disabled] .btn-tertiary:hover,
+.btn-tertiary.disabled:focus,
+.btn-tertiary[disabled]:focus,
+fieldset[disabled] .btn-tertiary:focus,
+.btn-tertiary.disabled.focus,
+.btn-tertiary[disabled].focus,
+fieldset[disabled] .btn-tertiary.focus {
+  background-color: #2a4930;
+  border-color: #2a4930;
+}
+.btn-tertiary .badge {
+  color: #2a4930;
+  background-color: #fff;
+}
+.btn-dark {
+  color: #ffffff;
+  background-color: #1c1c1c;
+  border-color: #1c1c1c;
+}
+.btn-dark:focus,
+.btn-dark.focus {
+  color: #ffffff;
+  background-color: #020202;
+  border-color: #000000;
+}
+.btn-dark:hover {
+  color: #ffffff;
+  background-color: #020202;
+  border-color: #000000;
+}
+.btn-dark:active,
+.btn-dark.active,
+.open > .dropdown-toggle.btn-dark {
+  color: #ffffff;
+  background-color: #020202;
+  background-image: none;
+  border-color: #000000;
+}
+.btn-dark:active:hover,
+.btn-dark.active:hover,
+.open > .dropdown-toggle.btn-dark:hover,
+.btn-dark:active:focus,
+.btn-dark.active:focus,
+.open > .dropdown-toggle.btn-dark:focus,
+.btn-dark:active.focus,
+.btn-dark.active.focus,
+.open > .dropdown-toggle.btn-dark.focus {
+  color: #ffffff;
+  background-color: #000000;
+  border-color: #000000;
+}
+.btn-dark.disabled:hover,
+.btn-dark[disabled]:hover,
+fieldset[disabled] .btn-dark:hover,
+.btn-dark.disabled:focus,
+.btn-dark[disabled]:focus,
+fieldset[disabled] .btn-dark:focus,
+.btn-dark.disabled.focus,
+.btn-dark[disabled].focus,
+fieldset[disabled] .btn-dark.focus {
+  background-color: #1c1c1c;
+  border-color: #1c1c1c;
+}
+.btn-dark .badge {
+  color: #1c1c1c;
+  background-color: #ffffff;
 }
 .dropdown-menu > li > a {
   text-decoration: none;
