--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -49,6 +49,22 @@ html {
 
 // 3. Theme Styling
 // -------------------------
+
+:root {
+  --brand-primary: @brand-primary;
+  --brand-secondary: @brand-secondary;
+  --brand-tertiary: @brand-tertiary;
+  --brand-kraft: @brand-kraft;
+  --brand-info: @brand-info;
+  --brand-warning: @brand-warning;
+  --brand-danger: @brand-danger;
+  --gray-darker: @gray-darker;
+  --gray-dark: @gray-dark;
+  --gray: @gray;
+  --gray-light: @gray-light;
+  --gray-lighter: @gray-lighter;
+}
+
 .hidden {
   display: none !important;
 }
