--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -77,6 +77,21 @@ html {
   transition: all 0.1s ease-in-out;
 }
 
+#navigation-secondary {
+  font-size: 90%;
+  background-color: var(--brand-primary);
+  color: white;
+
+  ul {
+    background-color: var(--gray-darker);
+  }
+
+  a:hover,
+  a:focus { 
+    color: white;
+  }
+}
+
 .js-container {
   padding: 0 !important;
 }
@@ -152,6 +167,15 @@ footer a:hover {
   section {
     padding-top: @spacer*48;
     padding-bottom: @spacer*48;
+  }
+
+  #navigation-secondary {
+    background-color: var(--gray-darker);
+
+    .collapse {
+      display: flex;
+      height: auto !important;
+    }
   }
 }
 
