continued building out /jobs

--- a/Themes/new/Styles/_colors.less
+++ b/Themes/new/Styles/_colors.less
@@ -26,3 +26,25 @@
 .text-gray { color: @gray; }
 .text-gray-light { color: @gray-light; }
 .text-gray-lighter { color: @gray-lighter; }
+
+// Fill Colors
+.fill-primary { fill: @brand-primary; }
+.fill-secondary { fill: @brand-secondary; }
+.fill-tertiary { fill: @brand-tertiary; }
+.fill-kraft { fill: @brand-kraft; }
+.fill-gray-darker { fill: @gray-darker; }
+.fill-gray-dark { fill: @gray-dark; }
+.fill-gray { fill: @gray; }
+.fill-gray-light { fill: @gray-light; }
+.fill-gray-lighter { fill: @gray-lighter; }
+
+// Stroke Colors
+.stroke-primary { stroke: @brand-primary; }
+.stroke-secondary { stroke: @brand-secondary; }
+.stroke-tertiary { stroke: @brand-tertiary; }
+.stroke-kraft { stroke: @brand-kraft; }
+.stroke-gray-darker { stroke: @gray-darker; }
+.stroke-gray-dark { stroke: @gray-dark; }
+.stroke-gray { stroke: @gray; }
+.stroke-gray-light { stroke: @gray-light; }
+.stroke-gray-lighter { stroke: @gray-lighter; }
