--- a/Themes/new/Styles/_typography.less
+++ b/Themes/new/Styles/_typography.less
@@ -126,6 +126,10 @@ blockquote {
   color: @gray;
 }
 
+small {
+  font-size: 80%;
+}
+
 .font-sans {
   font-family: @font-family-headings;
 }
@@ -282,6 +286,11 @@ a {
   .h5 {
     font-size: ceil(@font-size-h5 * 1.3); // 32px
     letter-spacing: -1.45px;
+  }
+
+  h6,
+  .h6 {
+    font-size: ceil(@font-size-h6); // 26px
   }
 
   .pretitle {
