--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -12,7 +12,8 @@
 @import "_swiper.less";
 @import "_shadows.less";
 @import "_borders.less";
-@import "_helpers.less";
+@import "_timeline.less";
+@import "_utilities.less";
 @import "_print.less";
 
 /*
@@ -114,11 +115,9 @@ section {
 .background-center {
   background-position: center;
 }
-
 .background-top {
   background-position: top;
 }
-
 .background-bottom {
   background-position: bottom;
 }
@@ -167,6 +166,22 @@ footer a:hover {
   section {
     padding-top: @spacer*48;
     padding-bottom: @spacer*48;
+  }
+
+  .background-md-center {
+    background-position: center;
+  }
+  .background-md-top {
+    background-position: top;
+  }
+  .background-md-bottom {
+    background-position: bottom;
+  }
+  .background-md-left {
+    background-position: left;
+  }
+  .background-md-right {
+    background-position: right;
   }
 
   #navigation-secondary {
