--- a/Themes/new/Styles/_typography.less
+++ b/Themes/new/Styles/_typography.less
@@ -130,6 +130,10 @@ small {
   font-size: 80%;
 }
 
+.no-wrap {
+  white-space: nowrap;
+}
+
 .font-sans {
   font-family: @font-family-headings;
 }
@@ -171,6 +175,33 @@ small {
 }
 .font-underline {
  text-decoration: underline;
+}
+
+.tracking-tightest {
+  letter-spacing: -0.1em;
+}
+.tracking-tighter {
+  letter-spacing: -0.05em;
+}
+
+.tracking-tight {
+  letter-spacing: -0.025em;
+}
+
+.tracking-normal {
+  letter-spacing: 0em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
+.tracking-widest {
+  letter-spacing: 0.1em;
 }
 
 mark {
