more work on jobs page

--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -151,9 +151,17 @@ section {
   cursor: pointer;
 }
 
+.clickable {
+  transition: all .2s ease-in-out;
+}
+.clickable:hover {
+  opacity: .9;
+}
+
 footer a:hover {
   color: @white;
 }
+
 
 @media @sm {
   section {
