--- a/Themes/new/Styles/utilities/_flexgrid.less
+++ b/Themes/new/Styles/utilities/_flexgrid.less
@@ -161,6 +161,15 @@
     grid-template-columns: none;
   }
 
+  .gap@{infix}-0 {
+    gap: 0;
+  }
+  .gap-x@{infix}-0 {
+    column-gap: 0;
+  }
+  .gap-y@{infix}-0 {
+    row-gap: 0;
+  }
   .gap@{infix}-1 {
     gap: @spacer * @spacing-1;
   }
