--- a/Themes/new/Styles/utilities/_positioning.less
+++ b/Themes/new/Styles/utilities/_positioning.less
@@ -48,6 +48,19 @@
     left: 0%;
   }
 
+  .top@{infix}-5 {
+    top: 5%;
+  }
+  .right@{infix}-5 {
+    right: 5%;
+  }
+  .bottom@{infix}-5 {
+    bottom: 5%;
+  }
+  .left@{infix}-5 {
+    left: 5%;
+  }
+
   .top@{infix}-25 {
     top: 25%;
   }
