--- a/Themes/new/Styles/_timeline.less
+++ b/Themes/new/Styles/_timeline.less
@@ -4,6 +4,7 @@
     min-height: 100px;
 
     & > div {
+      position: relative;
 
       // Nodes
       &:before {
@@ -22,17 +23,30 @@
       }
     }
 
-    &:not(:last-child) > div {
+    & > div {
       // Connecting Lines
       &:after {
         content: '';
         position: absolute;
-        top: 50%;
+        top: 0%;
         left: 0;
         width: 4px;
         margin-left: -2px;
         height: 100%;
         background-color: var(--gray-light)
+      }
+    }
+
+    &:first-child > div,
+    &:last-child > div {
+      &:after {
+        height: 50%;
+      }
+    }
+
+    &:first-child > div {
+      &:after {
+        top: 50%;
       }
     }
   }
