--- a/Themes/new/Styles/theme.css
+++ b/Themes/new/Styles/theme.css
@@ -17869,6 +17869,9 @@ button.swiper-pagination-bullet {
 .timeline .timeline--item {
   min-height: 100px;
 }
+.timeline .timeline--item > div {
+  position: relative;
+}
 .timeline .timeline--item > div:before {
   content: '';
   position: absolute;
@@ -17883,15 +17886,22 @@ button.swiper-pagination-bullet {
   border: 4px solid var(--gray-light);
   z-index: 1;
 }
-.timeline .timeline--item:not(:last-child) > div:after {
+.timeline .timeline--item > div:after {
   content: '';
   position: absolute;
-  top: 50%;
+  top: 0%;
   left: 0;
   width: 4px;
   margin-left: -2px;
   height: 100%;
   background-color: var(--gray-light);
+}
+.timeline .timeline--item:first-child > div:after,
+.timeline .timeline--item:last-child > div:after {
+  height: 50%;
+}
+.timeline .timeline--item:first-child > div:after {
+  top: 50%;
 }
 @media (min-width: 768px) {
   .timeline .timeline--item i {
@@ -18332,6 +18342,15 @@ button.swiper-pagination-bullet {
 .grid-cols-none {
   grid-template-columns: none;
 }
+.gap-0 {
+  gap: 0;
+}
+.gap-x-0 {
+  column-gap: 0;
+}
+.gap-y-0 {
+  row-gap: 0;
+}
 .gap-1 {
   gap: 8px;
 }
@@ -18466,6 +18485,18 @@ button.swiper-pagination-bullet {
 }
 .left-0 {
   left: 0%;
+}
+.top-5 {
+  top: 5%;
+}
+.right-5 {
+  right: 5%;
+}
+.bottom-5 {
+  bottom: 5%;
+}
+.left-5 {
+  left: 5%;
 }
 .top-25 {
   top: 25%;
@@ -19112,6 +19143,15 @@ button.swiper-pagination-bullet {
   .grid-cols-sm-none {
     grid-template-columns: none;
   }
+  .gap-sm-0 {
+    gap: 0;
+  }
+  .gap-x-sm-0 {
+    column-gap: 0;
+  }
+  .gap-y-sm-0 {
+    row-gap: 0;
+  }
   .gap-sm-1 {
     gap: 8px;
   }
@@ -19246,6 +19286,18 @@ button.swiper-pagination-bullet {
   }
   .left-sm-0 {
     left: 0%;
+  }
+  .top-sm-5 {
+    top: 5%;
+  }
+  .right-sm-5 {
+    right: 5%;
+  }
+  .bottom-sm-5 {
+    bottom: 5%;
+  }
+  .left-sm-5 {
+    left: 5%;
   }
   .top-sm-25 {
     top: 25%;
@@ -19893,6 +19945,15 @@ button.swiper-pagination-bullet {
   .grid-cols-md-none {
     grid-template-columns: none;
   }
+  .gap-md-0 {
+    gap: 0;
+  }
+  .gap-x-md-0 {
+    column-gap: 0;
+  }
+  .gap-y-md-0 {
+    row-gap: 0;
+  }
   .gap-md-1 {
     gap: 8px;
   }
@@ -20027,6 +20088,18 @@ button.swiper-pagination-bullet {
   }
   .left-md-0 {
     left: 0%;
+  }
+  .top-md-5 {
+    top: 5%;
+  }
+  .right-md-5 {
+    right: 5%;
+  }
+  .bottom-md-5 {
+    bottom: 5%;
+  }
+  .left-md-5 {
+    left: 5%;
   }
   .top-md-25 {
     top: 25%;
@@ -20674,6 +20747,15 @@ button.swiper-pagination-bullet {
   .grid-cols-lg-none {
     grid-template-columns: none;
   }
+  .gap-lg-0 {
+    gap: 0;
+  }
+  .gap-x-lg-0 {
+    column-gap: 0;
+  }
+  .gap-y-lg-0 {
+    row-gap: 0;
+  }
   .gap-lg-1 {
     gap: 8px;
   }
@@ -20808,6 +20890,18 @@ button.swiper-pagination-bullet {
   }
   .left-lg-0 {
     left: 0%;
+  }
+  .top-lg-5 {
+    top: 5%;
+  }
+  .right-lg-5 {
+    right: 5%;
+  }
+  .bottom-lg-5 {
+    bottom: 5%;
+  }
+  .left-lg-5 {
+    left: 5%;
   }
   .top-lg-25 {
     top: 25%;
@@ -21455,6 +21549,15 @@ button.swiper-pagination-bullet {
   .grid-cols-xl-none {
     grid-template-columns: none;
   }
+  .gap-xl-0 {
+    gap: 0;
+  }
+  .gap-x-xl-0 {
+    column-gap: 0;
+  }
+  .gap-y-xl-0 {
+    row-gap: 0;
+  }
   .gap-xl-1 {
     gap: 8px;
   }
@@ -21589,6 +21692,18 @@ button.swiper-pagination-bullet {
   }
   .left-xl-0 {
     left: 0%;
+  }
+  .top-xl-5 {
+    top: 5%;
+  }
+  .right-xl-5 {
+    right: 5%;
+  }
+  .bottom-xl-5 {
+    bottom: 5%;
+  }
+  .left-xl-5 {
+    left: 5%;
   }
   .top-xl-25 {
     top: 25%;
@@ -22177,6 +22292,12 @@ section {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.clickable {
+  transition: all 0.2s ease-in-out;
+}
+.clickable:hover {
+  opacity: 0.9;
 }
 footer a:hover {
   color: #ffffff;
