--- a/Themes/new/Styles/utilities/_ratios.less
+++ b/Themes/new/Styles/utilities/_ratios.less
@@ -27,6 +27,9 @@
   .ratio@{infix}-square {
     aspect-ratio: 1 / 1;
   }
+  .ratio@{infix}-shuare {
+    aspect-ratio: 1 / 1.25;
+  }
   .ratio@{infix}-portrait {
     aspect-ratio: 1 / 1.5;
   }
