--- a/Themes/new/Styles/utilities/_sizing.less
+++ b/Themes/new/Styles/utilities/_sizing.less
@@ -37,4 +37,24 @@
   .w@{infix}-100 {
     width: 100% !important;
   }
+
+  .max-w@{infix}-auto {
+    max-width: auto !important;
+  }
+  .max-w@{infix}-0 {
+    max-width: 0% !important;
+  }
+  .max-w@{infix}-25 {
+    max-width: 25% !important;
+  }
+  .max-w@{infix}-50 {
+    max-width: 50% !important;
+  }
+  .max-w@{infix}-75 {
+    max-width: 75% !important;
+  }
+  .max-w@{infix}-100 {
+    max-width: 100% !important;
+  }
+  
 }
