--- a/Themes/new/Styles/_borders.less
+++ b/Themes/new/Styles/_borders.less
@@ -55,4 +55,14 @@
 .rounded-md	{ border-radius: 0.375rem; }
 .rounded-lg	{ border-radius: 0.5rem; }
 .rounded-xl	{ border-radius: 0.75rem; }
+.rounded-2x	{ border-radius: 1.5rem; }
 .rounded-full	{ border-radius: 9999px; }
+
+.rounded-tr-0 { border-top-right-radius: 0; }
+.rounded-br-0 { border-bottom-right-radius: 0; }
+.rounded-tl-0 { border-top-left-radius: 0; }
+.rounded-bl-0 { border-bottom-left-radius: 0; }
+.rounded-t-0 { border-top-left-radius: 0; border-top-right-radius: 0;}
+.rounded-b-0 { border-bottom-left-radius: 0; border-bottom-right-radius: 0;}
+.rounded-l-0 { border-top-left-radius: 0; border-bottom-left-radius: 0;}
+.rounded-r-0 { border-top-right-radius: 0; border-bottom-right-radius: 0;}
