--- a/Themes/new/Styles/theme.css
+++ b/Themes/new/Styles/theme.css
@@ -18997,6 +18997,9 @@ button.swiper-pagination-bullet {
 .max-w-100 {
   max-width: 100% !important;
 }
+.vh-100 {
+  height: 100vh;
+}
 @media (min-width: 576px) {
   .d-sm-none {
     display: none !important;
@@ -19804,6 +19807,9 @@ button.swiper-pagination-bullet {
   }
   .max-w-sm-100 {
     max-width: 100% !important;
+  }
+  .vh-sm-100 {
+    height: 100vh;
   }
 }
 @media (min-width: 768px) {
@@ -20614,6 +20620,9 @@ button.swiper-pagination-bullet {
   .max-w-md-100 {
     max-width: 100% !important;
   }
+  .vh-md-100 {
+    height: 100vh;
+  }
 }
 @media (min-width: 992px) {
   .d-lg-none {
@@ -21423,6 +21432,9 @@ button.swiper-pagination-bullet {
   .max-w-lg-100 {
     max-width: 100% !important;
   }
+  .vh-lg-100 {
+    height: 100vh;
+  }
 }
 @media (min-width: 1441px) {
   .d-xl-none {
@@ -22231,6 +22243,9 @@ button.swiper-pagination-bullet {
   }
   .max-w-xl-100 {
     max-width: 100% !important;
+  }
+  .vh-xl-100 {
+    height: 100vh;
   }
 }
 @media print {
