updates to theme for /jobs, added parse lava for home

--- a/Themes/new/Styles/_colors.less
+++ b/Themes/new/Styles/_colors.less
@@ -21,7 +21,7 @@
 .text-secondary { color: @brand-secondary; }
 .text-tertiary { color: @brand-tertiary; }
 .text-kraft { color: @brand-kraft; }
-.text-gray-darker { color: @gray-darker; }
+.text-gray-darker, .text-gray-darker:hover { color: @gray-darker; }
 .text-gray-dark { color: @gray-dark; }
 .text-gray { color: @gray; }
 .text-gray-light { color: @gray-light; }
