--- a/Themes/new/Styles/_timeline.less
+++ b/Themes/new/Styles/_timeline.less
@@ -17,7 +17,7 @@
         width: 20px;
         height: 20px;
         border-radius: 1000px;
-        background-color: #fff;
+        background-color: var(--gray-darker);
         border: 4px solid var(--gray-light);
         z-index: 1;
       }
