--- a/Themes/new/Styles/theme.css
+++ b/Themes/new/Styles/theme.css
@@ -18148,7 +18148,7 @@ button.swiper-pagination-bullet {
   width: 20px;
   height: 20px;
   border-radius: 1000px;
-  background-color: #fff;
+  background-color: var(--gray-darker);
   border: 4px solid var(--gray-light);
   z-index: 1;
 }
