--- a/Themes/new/Styles/_typography.less
+++ b/Themes/new/Styles/_typography.less
@@ -178,30 +178,30 @@ small {
 }
 
 .tracking-tightest {
-  letter-spacing: -0.1em;
+  letter-spacing: -0.1em !important;
 }
 .tracking-tighter {
-  letter-spacing: -0.05em;
+  letter-spacing: -0.05em !important;
 }
 
 .tracking-tight {
-  letter-spacing: -0.025em;
+  letter-spacing: -0.025em !important;
 }
 
 .tracking-normal {
-  letter-spacing: 0em;
+  letter-spacing: 0em !important;
 }
 
 .tracking-wide {
-  letter-spacing: 0.025em;
+  letter-spacing: 0.025em !important;
 }
 
 .tracking-wider {
-  letter-spacing: 0.05em;
+  letter-spacing: 0.05em !important;
 }
 
 .tracking-widest {
-  letter-spacing: 0.1em;
+  letter-spacing: 0.1em !important;
 }
 
 mark {
