--- a/Themes/new/Styles/theme.css
+++ b/Themes/new/Styles/theme.css
@@ -16833,25 +16833,25 @@ small {
   text-decoration: underline;
 }
 .tracking-tightest {
-  letter-spacing: -0.1em;
+  letter-spacing: -0.1em !important;
 }
 .tracking-tighter {
-  letter-spacing: -0.05em;
+  letter-spacing: -0.05em !important;
 }
 .tracking-tight {
-  letter-spacing: -0.025em;
+  letter-spacing: -0.025em !important;
 }
 .tracking-normal {
-  letter-spacing: 0em;
+  letter-spacing: 0em !important;
 }
 .tracking-wide {
-  letter-spacing: 0.025em;
+  letter-spacing: 0.025em !important;
 }
 .tracking-wider {
-  letter-spacing: 0.05em;
+  letter-spacing: 0.05em !important;
 }
 .tracking-widest {
-  letter-spacing: 0.1em;
+  letter-spacing: 0.1em !important;
 }
 mark {
   background-color: #fff14f;
@@ -17133,6 +17133,10 @@ fieldset[disabled] .btn-dark.focus {
   font-family: "colfax-web", sans-serif;
   font-weight: 500;
   letter-spacing: -0.5px;
+}
+.btn > i {
+  position: relative;
+  top: 1px;
 }
 .btn-danger {
   color: #fff;
